--- a/Task-2-CSS-Selectors/style.css
+++ b/Task-2-CSS-Selectors/style.css
@@ -8,51 +8,50 @@ body {
 
 #bglime {
   background-color: lime;
-  color: red;
 }
 
 p {
-    color: white;
-    font-size: 25px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  font-size: 25px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 p:nth-of-type(2) {
-    color: green;
+  color: green;
 }
 
 p:nth-of-type(2) span {
-    color: black;
-    font-size: 1.8em;
+  color: black;
+  font-size: 1.8em;
 }
-
-ul:nth-of-type(1) li::before {
-    content: "Click ";
-    color: white;
-}
-
-/* Style "here" text */
-ul:nth-of-type(1) li::after {
-    content: " to go to UpskillMafia";
-    color: white;
+.htag {
+  color: red;
 }
 
 /* Style "here" word */
 ul:nth-of-type(1) li::before span {
-    background-color: yellow;
-    color: blue;
+  background-color: yellow;
+  color: blue;
 }
 
 /* Style "to go to UpskillMafia" */
 ul:nth-of-type(1) li::after {
-    color: white;
+  color: white;
 }
 
-
 ol li:nth-child(2) {
-    color: blue;
+  color: blue;
 }
 
 ol li:nth-child(3) {
-    color: red;
+  color: red;
+}
+
+a {
+  background-color: aqua;
+  color: blue;
+}
+.first > a {
+  background-color: blanchedalmond;
 }
