--- a/Task-7-Hamburger/style.css
+++ b/Task-7-Hamburger/style.css
@@ -8,13 +8,20 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 40px;
+  padding: 5px 120px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+nav header{
+  padding-left: 30px;
 }
 
 nav ul {
   display: flex;
   list-style: none;
-  gap: 30px;
+  gap: 60px;
+  padding-left: 0px;
 }
 nav ul li {
   cursor: pointer;
@@ -30,7 +37,7 @@ nav button {
   border-radius: 15px;
 }
 
-span {
+aside {
   background-color: rgb(245, 244, 244);
   margin: 0;
   padding: 0;
@@ -101,7 +108,43 @@ main button {
   border-radius: 15px;
 }
 
+main button:hover {
+  transform: scale(1.4) translateX(-5px) rotate(-5deg);
+  padding: 25px 25px;
+  transition: 1s;
+}
+
+@keyframes orbit {
+  0% {
+      transform: translateX(30px) translateY(-30px) scale(1);
+  }
+  25% {
+      transform: translateX(30px) translateY(30px) scale(1);
+  }
+  50% {
+      transform: translateX(-30px) translateY(30px) scale(1);
+  }
+  75% {
+      transform: translateX(-30px) translateY(-30px) scale(1);
+  }
+  95% {
+      transform: translateX(30px) translateY(-30px) scale(1.1);
+  }
+  100% {
+      transform: translateX(30px) translateY(-30px) scale(1.3);
+  }
+}
+
+main:hover img {
+  animation: orbit 1.5s linear;
+}
+
 @media screen and (max-width: 900px) {
+  nav{
+    max-width: 100%;
+    margin-right: 0;
+    padding: 0;
+  }
   main {
     max-width: 100%;
     flex-direction: column;
@@ -125,8 +168,17 @@ main button {
     padding: 25px;
     border-radius: 50px;
   }
+  nav ul{
+    gap: 20px;
+  }
   nav ul li {
     font-size: medium;
+  }
+  nav{
+    padding-left: 10px;
+  }
+  nav{
+    justify-content: space-between;
   }
 }
 
@@ -147,6 +199,7 @@ main button {
     display: flex;
     align-items: center;
     justify-content: left;
+    padding-left: 20px;  
   }
   nav button{
     margin-left: auto;
