--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -1,36 +1,39 @@
-body{
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  margin: 10vh 25vw;
+  box-sizing: border-box;
 }
 
-.photo {
-    width: 500px;
-    text-align: center; 
-    box-sizing: border-box;
-  }
-  
-  .photo img {
-    max-width: 100%; 
-    height: auto;
-  }
-  a{color:black}
-  button {
-    width:100%;
-    text-align: center;
-    background: linear-gradient(to right, #4190ff, #ff4b2b); 
-    border: none; 
-    color: white; 
-    padding: 10px 20px; 
-    font-size: 16px;
-    font-family: Arial, sans-serif; 
-    cursor: pointer; 
-    transition: 0.42s;
-  }
-  
-  button:hover {
-    background: linear-gradient(to right, #ff4b2b, #ff416c); 
-  }
+.container {
+  width: 50vw;
+  height: 80vh;
+  position: relative;
+}
+
+.image-container {
+  width: 100%;
+  height: 70%;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+button {
+  position: absolute;
+  bottom: 19%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 366px;
+  background: linear-gradient(45deg, #FF416C, #FF4B2B);
+  color: #fff;
+  border: none;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: linear-gradient(45deg, #FF4B2B, #FF416C);
+}
