--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -24,8 +24,9 @@ button {
   position: absolute;
   bottom: 19%;
   left: 50%;
+  width: 765px;
   transform: translateX(-50%);
-  padding: 10px 366px;
+  padding: 20px 25px;
   background: linear-gradient(45deg, #FF416C, #FF4B2B);
   color: #fff;
   border: none;
