--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -18,11 +18,12 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  padding: 7.5% 0px;
 }
 
 button {
   position: absolute;
-  bottom: 19%;
+  bottom: 10%;
   left: 50%;
   width: 765px;
   transform: translateX(-50%);
