--- a/Group-Task-1/style.css
+++ b/Group-Task-1/style.css
@@ -1,29 +1,39 @@
 body {
-  background: rgb(245, 111, 60);
+  /* height: 180vh; */
+  margin: 0;
+  overflow: hidden;
+}
+.clip-overlay {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   background: linear-gradient(
     97deg,
     rgba(245, 111, 60, 1) 0%,
     rgba(246, 134, 90, 1) 32%,
-    rgba(248, 155, 120, 1) 50%,
+    rgb(246, 127, 84) 50%,
     rgba(248, 155, 120, 1) 69%
-  );
-  background-size: cover;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+);
+clip-path: polygon(0% 0%, 92% 0, 65% 50%, 92% 100%, 0% 100%);
 }
 
+section{
+  position: absolute;
+  top: 0;
+  height: 100vh;
+}
 nav {
   display: flex;
-  width: 70%;
-  margin: 0 auto;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 25px;
+  padding: 25px 20px;
   color: white;
 }
 nav header {
   font-size: large;
   font-weight: 700;
+  padding-left: 50px;
 }
 
 nav ul {
@@ -45,4 +55,14 @@ div {
   color: white;
   width: 50%;
   margin: 0 auto;
+}
+
+img{
+  position: absolute;
+  right: 5;
+  top: 5;
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  width: 200px;
+  height: 400px;
+  z-index: 1;
 }
