--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -23,11 +23,12 @@ img {
 
 button {
   position: absolute;
-  bottom: 10%;
+  bottom: 18%;
   left: 50%;
   width: 765px;
   transform: translateX(-50%);
   padding: 20px 25px;
+  position: fixed;
   background: linear-gradient(45deg, #FF416C, #FF4B2B);
   color: #fff;
   border: none;
