--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -1,42 +1,30 @@
 body {
-  margin: 10vh 25vw;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-.container {
-  width: 50vw;
-  height: 80vh;
-  position: relative;
-}
-
 .image-container {
-  width: 100%;
-  height: 70%;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  margin-right: 25vw;
+  margin-left: 25vw;
 }
 
 img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  padding: 7.5% 0px;
+  display: block;
 }
 
 button {
-  position: absolute;
-  bottom: 18%;
-  left: 50%;
-  width: 765px;
-  transform: translateX(-50%);
-  padding: 20px 25px;
-  position: fixed;
-  background: linear-gradient(45deg, #FF416C, #FF4B2B);
-  color: #fff;
-  border: none;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  cursor: pointer;
+  background: linear-gradient(45deg, orange,green);
+  height: 10vh;
+  width: 50vw;
+  padding: 5vh 5vw;
+  color: white;
+  border: 1;
+  font-size: 32px;
+  text-align: center;
+  line-height: 1vh;
 }
 
-button:hover {
-  background: linear-gradient(45deg, #FF4B2B, #FF416C);
-}
