--- a/Task-3-CSS/style.css
+++ b/Task-3-CSS/style.css
@@ -19,11 +19,11 @@ img {
 button {
   background: linear-gradient(45deg, orange,green);
   height: 10vh;
-  width: 50vw;
+  width: 100%;
   padding: 5vh 5vw;
   color: white;
   border: 1;
-  font-size: 32px;
+  font-size: 5vh;
   text-align: center;
   line-height: 1vh;
 }
